--- a/VRChat/47/1370147.html
+++ b/VRChat/47/1370147.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gjtOm87SSbCV8FG6vW2nPEqo4R6gmEsfR0qgIPiuVQs="></script>
+    "s4JbH7t15Co4C5lVfouGblpWWQGy0Y10hPY1dzFYmk0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Watch v1","description":"現在Worldに止まっていた時間を表示する機能を持っている時計です。\n\n\n\n[Polygon]\n\nFaces:4541\nTris:8758\n\n[Texture]\n\n2048X2048\n\nBasement (Albedo)\nNormal\nMetallic\nEmission\n\n(Standard/Flat Toon Material)\n\n[File]\n\nWatch_v1.Unitypackage(1,994KB)\nIf Change Scale.txt(1KB)\n\n[Email]\n\nPhecrys@gmail.com\n\n-----------------------------------------------\n\n以前に掲示されたファイルは,商標表記関連の問題により削除されました。\n\nそれによってロゴを除去したバージョンで新たに掲示されました。\n\n申し訳ありませんが,以前時計を購入された方々は購買内訳をEメールでお送りしましたらファイルを送ります。\n\nありがとうございます\n\n(Korean -\u003e Japanese Translate)","url":"https://booth.pm/ja/items/1370147","offers":{"priceCurrency":"JPY","@type":"Offer","price":"350"},"image":"https://booth.pximg.net/c/620x620/4a1c1edc-9b81-4a0c-9a1f-0a5af94b8e1a/i/1370147/f5d4713e-92eb-48e3-aa8d-c7c0f46a04ac_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gjtOm87SSbCV8FG6vW2nPEqo4R6gmEsfR0qgIPiuVQs="></script>
+    nonce="s4JbH7t15Co4C5lVfouGblpWWQGy0Y10hPY1dzFYmk0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1370147/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               30
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1370147/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               30
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
