--- a/VRChat/94/1369294.html
+++ b/VRChat/94/1369294.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+AD9SKODs9MVWJN+qjTUM1amZC+iGzjZ/ZLlzzsUUAg="></script>
+    "giyW3+fry3/YQpMd3i/helC4sjoX7wbaaROEUfdBBuY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バーチャルキャストイベントポスターカレンダー","description":"🧩絵柄を募集中！🧩 (下の方の見出しを参照)\n\nバーチャルキャストやVRChat上で利用できる、バーチャルキャストイベントカレンダーのポスターカレンダーです。\n\n※ポスターカレンダーは、バーチャルキャストの公式のサービスではありません。\n※予定を登録してからポスターカレンダーへ反映されるまでには、最大で3時間ほどの遅延があります。経由しているサービスの停止等により、さらに遅れる場合もあります。\n\n▚▚▚ 画像のURL\nhttps://esperecyan.github.io/vcas-calendar.png\n\n▚▚▚ THE SEED ONLINEのアイテム\nhttps://seed.online/products/264bbb24bbeb996dcaa477ab0cf47e27e21f35670d629291178b9cf40d223092\n※諸事情により、2022-08-09以降、VirtualCast公式素材置き場アカウントで管理してもらうことになったため、アイテムが変更になっています。お手数をおかけしますが、取り込み直し・配置し直し等をお願いいたします。\n\n▚▚▚ VRChatワールド用プレハブ\n以下のアセットをご利用ください。\n\n『VRChat向け自動更新ポスターまとめ』(PC/Quest/SDK2/SDK3対応)\nhttps://pokemori.booth.pm/items/2401621\n\n\n\nバーチャルキャストイベントポスターカレンダーは、坪倉輝明さんの『VRChatイベントカレンダーPrefab』のアイデア、デザインを基にして作成しました。\nhttps://tsubokulab.booth.pm/items/1223535","url":"https://booth.pm/ja/items/1369294","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ba01b0da-9d0b-4dd8-a9ad-3f35270de1c8/i/1369294/07f85084-0535-4774-b1ad-5c6cbb707a5b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+AD9SKODs9MVWJN+qjTUM1amZC+iGzjZ/ZLlzzsUUAg="></script>
+    nonce="giyW3+fry3/YQpMd3i/helC4sjoX7wbaaROEUfdBBuY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1369294/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               143
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1369294/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               143
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
