--- a/VRChat/46/1369346.html
+++ b/VRChat/46/1369346.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FSpwbF+4FOUbrTX84lovIDWflwt0o3kb9Vnz3qXbd8U="></script>
+    "MbdynNd6oK/6EpXVKQC2MfmLdIdiRQ8QvwMwnhflNgk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ライター（VRChat想定）","description":"普通のライターです。\nこちらのモデルはVRChatでの使用を想定して作っていますが、禁止事項を守って頂ければVRChat以外でもご自由にご利用ください。\n\n内容物\n・LighterSilver.fbx（FBXファイル）\n・LighterSilver.fbx.meta（メタデータ）\n・ライター.prefab（プレハブ）\n・ライター.prefab.meta（メタデータ）\n・ライター本体.mat（マテリアル）\n・ライター本体.mat.meta（メタデータ）\n・中の金属.mat（マテリアル）\n・中の金属.mat.meta（メタデータ）\n\n使用方法\n全ファイルをUnityに読み込み、ライター.prefabを使用してください。\nライター本体.mat（マテリアル）を弄れば色や光沢等のカスタマイズができます。\nボーン→下側→キャップ（画像上部赤枠）を回転するとキャップが開きます。\nInspectorのSkinned Mesh Renderer内、BlendShapesのFireの値を100にすると着火できます。\n\n禁止事項\n再配布（ゲームへの組み込み・VRCのペデスタル等はOK）\n政治的・宗教的・差別的な用途への利用\n\n19/05/14\n火打石の追加しました。\n既にダウンロード済みの方はお手数ですが再度入れなおしてください。（上書き不可）","url":"https://booth.pm/ja/items/1369346","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4dfbeda-de4a-441b-ace4-484612b68061/i/1369346/6f2ec031-755e-445c-b03a-c0493c6beef0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FSpwbF+4FOUbrTX84lovIDWflwt0o3kb9Vnz3qXbd8U="></script>
+    nonce="MbdynNd6oK/6EpXVKQC2MfmLdIdiRQ8QvwMwnhflNgk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1369346/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               178
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1369346/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               178
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
