--- a/VRChat/28/1368728.html
+++ b/VRChat/28/1368728.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4TLRTRtls6T6bK5Y5Rxek0XIcyAsKdj1e12lgwFwx3k="></script>
+    "RmjgsyChMJOfa9CANLLOQkHAZvDlXMwagvfsWI19yn0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定　サファリハット","description":"VRCでの使用を想定したサファリハットのモデルです。\nUnityで、Headボーンの階層に追従させてお使いください。\nお出かけのお供に、いかがですか？\n\n・改変等は自由ですが、改変モデルの商業利用を禁止します。\n\n・当モデルの二次配布も禁止します。","url":"https://booth.pm/ja/items/1368728","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/70362ed7-0e33-4a16-9cbc-71a69d008f43/i/1368728/cfd0452b-77a8-40d4-9c9f-a52ff44cc6f9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4TLRTRtls6T6bK5Y5Rxek0XIcyAsKdj1e12lgwFwx3k="></script>
+    nonce="RmjgsyChMJOfa9CANLLOQkHAZvDlXMwagvfsWI19yn0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1368728/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               28
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1368728/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               28
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
