--- a/VRChat/41/1368541.html
+++ b/VRChat/41/1368541.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QvsU/F6XBcN31Skt0nOLP647q8367vFRPYNWH8HqfRk="></script>
+    "y3GKvfHWOqCMNr5B0rd5aFMWfIn+kHtUAk3Af9iLUvQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『SCARECROW -スケアクロウ-』","description":"販売用人型3Dモデル第四弾　\n量産型汎用義体 \"SCARECROW -スケアクロウ-\"\n\n昼は陰陽師、夜は忍の男性型(青年)です。\nヘルスゴス衣装版も追加しました。\nVRCアバターやゲーム等にご利用ください。\n\n〇内容\n・本体モデル\n・マテリアル+シェーダ\n・追加衣装版モデル\n\n〇フルボディトラッキング対応\n〇アイトラッキング対応\n〇リップシンク対応\n〇ポリゴン数 48128\n〇DynamicBone及びVRCSDK設定済み","url":"https://booth.pm/ja/items/1368541","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1368541/561f4f1a-313a-4d21-88ff-db7b28a4429e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QvsU/F6XBcN31Skt0nOLP647q8367vFRPYNWH8HqfRk="></script>
+    nonce="y3GKvfHWOqCMNr5B0rd5aFMWfIn+kHtUAk3Af9iLUvQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1368541/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              990
+                              989
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1368541/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              990
+                              989
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
