--- a/VRChat/77/1368377.html
+++ b/VRChat/77/1368377.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "CYTgEAqktHGSpmvWYQ7KP01cT0b9+9So2SHSfMeZnEQ="></script>
+    "1TApc6fF3dYpPmIBB+qNI1DofproaIX54H8AG/b9Ftw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"標準型生活補助義肢「Limb range」(義手・義足)","description":"両手両足の義肢セットです、ボーンとウェイトは設定済み\nなので一応Unityのみでの導入も可能です\n\n両手両足：△46724\n片腕：△14724\n片足：△8638\n\n・内容物\n　Blenderデータ\n　FBX\n　Readme","url":"https://booth.pm/ja/items/1368377","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/30d611ee-0eda-4ac5-9e8d-4bc31c8a94dc/i/1368377/0a142b66-f493-4c47-8a75-58c8554403d1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="CYTgEAqktHGSpmvWYQ7KP01cT0b9+9So2SHSfMeZnEQ="></script>
+    nonce="1TApc6fF3dYpPmIBB+qNI1DofproaIX54H8AG/b9Ftw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1368377/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               79
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1368377/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               79
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
